[package]
name = "round-order"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
color-eyre = "=0.5.7"
futures-util = "0.3"
serde = "1"
tracing = "0.1"
tracing-futures = "0.2"
dashmap = "3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
