[package]
name = "rpcbench"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[dependencies]
bertha = { path = "../bertha" }
burrito-localname-ctl = { path = "../burrito-localname-ctl", features = ["ctl"] }
kvstore = { path = "../kvstore" }
tls-tunnel = { path = "../tls-tunnel" }
serde = "1"
bincode = "1"
color-eyre = "0.5"
rand = "0.7"
rand_distr = "0.2"
criterion = "0.3"
futures-util = "0.3"
structopt = "0.3"
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-error = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-timing  = { version = "0.5", features = ["layer"] }

[dev-dependencies]
test-util = { path = "../test-util" }
