[package]
name = "shenango-bertha"
version = "0.1.0"
edition = "2021"

[dependencies]
shenango = { path = "../shenango-chunnel/caladan/bindings/rust" }
bertha = { path = "../bertha" }
burrito-shard-ctl = { path = "../burrito-shard-ctl" }
kvstore = { path = "../kvstore" }
kvstore-ycsb = { path = "../kvstore-ycsb" }
tracing = { version = "0.1" }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
bincode = "1"
structopt = "0.3"
tracing-subscriber = "0.2"
dashmap = "5"
