[package]
name = "shenango-chunnel"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
tracing = { version = "0.1" }
tracing-futures = "0.2"
color-eyre = "0.5"
shenango = { path = "./caladan/bindings/rust" }
flume = "0.10"
futures-util = "0.3"
lazy_static = "1"

[dev-dependencies]
lazy_static = "1.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
